--- a/kxw-web/.eslintrc.json
+++ b/kxw-web/.eslintrc.json
@@ -12,9 +12,9 @@
     "plugins": [ "html", "standard" ],
     "rules": {
         "indent": ["error", 4, { "SwitchCase": 1 }],
-        "quotes": ["error", "single"],
+        //"quotes": ["error", "single"],
         "semi": ["error", "always"],
-        "no-console": ["error"],
+        "no-console": ["off"],
         "no-empty": 2,
         "no-eq-null": 2,
         "no-new": 0,
