--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-jdbc")
     compile("org.springframework.boot:spring-boot-starter-aop")
+    compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2")
 
     compile group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.4.0'
     compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.5'
