利用悲观锁、乐观锁解决抢购商品的Demo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,20 @@
-# springMVC配置
-#spring.mvc.view.prefix=/
-#spring.mvc.view.suffix=.html
+server.port=8080
 
 #指定分环境配置文件的路径
 spring.config.location=/config/
 #默认使用dev的环境，运行其他环境命令：java -jar --spring.profiles.active=prod
 spring.profiles.active=dev
+
+##########数据库配置###########
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/kxw_spring_boot?useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=kxw672015
+
+###########MyBatis配置############
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+mybatis.type-aliases-package=org.kxw.springboot.pojo.entity
+
+###########视图配置###########
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
