--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
 }
 
 apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'war'
 //spring的版本管理工具
 apply plugin: 'io.spring.dependency-management'
 
@@ -20,7 +22,6 @@ jar {
     version = '0.0.1-SNAPSHOT'
 }
 
-
 dependencies {
     compile("org.springframework.boot:spring-boot-starter")
     compile("org.springframework.boot:spring-boot-starter-web")
@@ -33,10 +34,14 @@ dependencies {
     compile group: 'org.mybatis', name: 'mybatis', version: '3.4.6'
     compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
 
+    compile('org.apache.tomcat.embed:tomcat-embed-jasper')
+    compile('jstl:jstl:1.2')
+    compileOnly('javax.servlet:javax.servlet-api')
 
     //热交换
     compileOnly("org.springframework.boot:spring-boot-devtools")
-
+    compileOnly("org.projectlombok:lombok:1.18.8")
+    //测试包
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
 
